# chess-scoresheet

./: .gitignore  README.md  chess-score.cabal  chess-score.tex  chess-scoresheet.cabal
src/: Circle.hs  Example.hs  Scoresheet.hs
src/Data/: Test.hs
src/Data/Chess/: OutputFormat.hs  Scoresheet.hs
