name:               chess-score
version:            0.0.1
license:            BSD3
license-file:       LICENCE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>
maintainer:         Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>
copyright:          Copyright (C) 2015 Tony Morris
synopsis:           A chess score sheet
category:           Data
description:        A chess score sheet
homepage:           https://github.com/tonymorris/chess-score
bug-reports:        https://github.com/tonymorris/chess-score/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/chess-score.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                      base             >= 3   && < 5
                    , colour           >= 2.3
                    , diagrams         >= 1.1
                    , diagrams-cairo   >= 1.1
                    , diagrams-contrib >= 1.1
                    , diagrams-core    >= 1.1
                    , diagrams-lib     >= 1.1
                    , diagrams-svg     >= 1.1

  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Chess.Scoresheet

executable circle
  default-language:
                    Haskell2010

  hs-source-dirs:
                    src

  main-is:
                    Circle.hs                    

  build-depends:
                      base             >= 3   && < 5
                    , colour           >= 2.3
                    , diagrams         >= 1.1
                    , diagrams-cairo   >= 1.1
                    , diagrams-contrib >= 1.1
                    , diagrams-core    >= 1.1
                    , diagrams-lib     >= 1.1
                    , diagrams-svg     >= 1.1

  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

executable example
  default-language:
                    Haskell2010

  hs-source-dirs:
                    src

  main-is:
                    Example.hs                    

  build-depends:
                      base             >= 3   && < 5
                    , colour           >= 2.3
                    , diagrams         >= 1.1
                    , diagrams-cairo   >= 1.1
                    , diagrams-contrib >= 1.1
                    , diagrams-core    >= 1.1
                    , diagrams-lib     >= 1.1
                    , diagrams-svg     >= 1.1

  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                      base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
